--- a/autorentals-alam/assignment1-autorentals-beanfactory/rentals-beanfactory-app/pom.xml
+++ b/autorentals-alam/assignment1-autorentals-beanfactory/rentals-beanfactory-app/pom.xml
@@ -1,20 +1,29 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>info.ejava.alamnr.assignments.autorentals</groupId>
-        <artifactId>autorentals-alamnr</artifactId>
+        <groupId>info.ejava.alamnr.assignment1.autorentals</groupId>
+        <artifactId>assignment1-autorentals-beanfactory</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>info.ejava.alamnr.assignment0.app.autorentals</groupId>
-    <artifactId>assignment0-autorentals-bootapp</artifactId>
-    <name>Alamnr::Assignment0::Autorentals::Builds::Spring Boot App</name>
+    <artifactId>rentals-beanfactory-app</artifactId>
+    <name>Alamnr::Assignment1::Config::Bean Factory::App</name>
 
     <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>rentals-beanfactory-autorentals</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>rentals-beanfactory-iface</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -33,7 +42,7 @@
                         <goals>
                             <goal>run</goal>
                         </goals>
-                    </execution>
+                    </execution>    
                 </executions>
             </plugin>
         </plugins>
