--- a/autorentals-alam/pom.xml
+++ b/autorentals-alam/pom.xml
@@ -11,7 +11,7 @@
         <version>6.1.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
-    <groupId>info.ejava-student.alamnr.assignments.autorentals</groupId>
+    <groupId>info.ejava.alamnr.assignments.autorentals</groupId>
     <artifactId>autorentals-alamnr</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -33,6 +33,7 @@
     <modules>
         <module>assignment0-autorentals-javaapp</module>
         <module>assignment0-autorentals-bootapp</module>
+        <module>assignment1-autorentals-beanfactory</module>
     </modules>
     <repositories>
         <!-- <repository>
