map a Java @ConfigurationProperties class to properties, define validation rules for property values, leverage tooling to generate boilerplate code for JavaBean classes, solve more complex property mapping scenarios, solve injection mapping or ambiguity

--- a/autorentals-alam/pom.xml
+++ b/autorentals-alam/pom.xml
@@ -35,6 +35,7 @@
         <module>assignment0-autorentals-bootapp</module>
         <module>assignment1-autorentals-beanfactory</module>
         <module>assignment1-autorentals-propertysource</module>
+        <module>assignment1-autorentals-configprops</module>
     </modules>
     <repositories>
         <!-- <repository>
