--- a/autorentals-alam/pom.xml
+++ b/autorentals-alam/pom.xml
@@ -36,6 +36,7 @@
         <module>assignment1-autorentals-beanfactory</module>
         <module>assignment1-autorentals-propertysource</module>
         <module>assignment1-autorentals-configprops</module>
+        <module>assignment1-autorentals-autoconfig</module>
     </modules>
     <repositories>
         <!-- <repository>
