assignment on unit test

--- a/autorentals-alam/pom.xml
+++ b/autorentals-alam/pom.xml
@@ -38,6 +38,7 @@
         <module>assignment1-autorentals-configprops</module>
         <module>assignment1-autorentals-autoconfig</module>
         <module>assignment1-autorentals-logging</module>
+        <module>assignment1-autorentals-testing</module>
     </modules>
     <repositories>
         <!-- <repository>
