--- a/autorentals-support/pom.xml
+++ b/autorentals-support/pom.xml
@@ -37,6 +37,7 @@
 
     <modules>
         <module>autorentals-support-propertysource</module>
+        <module>autorentals-support-testing</module>
     </modules>
     <repositories>
         <!-- <repository>
