--- a/autorentals-alam/assignment1-autorentals-propertysource/pom.xml
+++ b/autorentals-alam/assignment1-autorentals-propertysource/pom.xml
@@ -25,6 +25,10 @@
             <version>${ejava.version}</version>
             
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 
