--- a/autorentals-alam/assignment2-autorentals-api/autorentals-api-svc/pom.xml
+++ b/autorentals-alam/assignment2-autorentals-api/autorentals-api-svc/pom.xml
@@ -33,6 +33,11 @@
             <version>6.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
