--- a/autorentals-alam/assignment2-autorentals-api/autorentals-api-main/pom.xml
+++ b/autorentals-alam/assignment2-autorentals-api/autorentals-api-main/pom.xml
@@ -22,6 +22,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>autorenters-api-client</artifactId>
@@ -35,6 +36,11 @@
         <dependency>
             <groupId>info.ejava.examples.common</groupId>
             <artifactId>ejava-web-util</artifactId>
+            <version>6.1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>info.ejava.examples.common</groupId>
+            <artifactId>ejava-webflux-util</artifactId>
             <version>6.1.0-SNAPSHOT</version>
         </dependency>
         
@@ -60,6 +66,10 @@
                 <exclusion>
                     <groupId>org.junit.vintage</groupId>
                     <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-jcl</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
