--- a/autorentals-alam/assignment2-autorentals-api/autorentals-api-main/pom.xml
+++ b/autorentals-alam/assignment2-autorentals-api/autorentals-api-main/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>autorenters-api-main</artifactId>
+    <artifactId>autorentals-api-main</artifactId>
      <name>Alamnr::Assignment2::API::AutoRentals API Main</name>
 
     <description>
@@ -77,6 +77,17 @@
 
     <build>
         <plugins>
+            <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                  <goals>
+                       <goal>repackage</goal> <!-- Ensures JAR is executable -->
+                  </goals>
+               </execution>
+            </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
