--- a/autorentals-support/autorentals-support-security/autorenters-support-security-svc/pom.xml
+++ b/autorentals-support/autorentals-support-security/autorenters-support-security-svc/pom.xml
@@ -16,6 +16,13 @@
     It is meant to be complete and usable. It is not a skeleton project.
     </description>
 
+
+    <properties>
+        <api.groupId>info.ejava.alamnr.assignment2.autorentals</api.groupId>
+        <api.version>1.0-SNAPSHOT</api.version>
+    </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -25,7 +32,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-        <dependency>
+        <!-- <dependency>
             <groupId>info.ejava.assignments.api.autorentals</groupId>
             <artifactId>autorenters-support-api-svc</artifactId>
             <version>${project.version}</version>
@@ -34,6 +41,16 @@
             <groupId>info.ejava.assignments.api.autorentals</groupId>
             <artifactId>autorenters-support-api-client</artifactId>
             <version>${project.version}</version>
+        </dependency> -->
+        <dependency>
+            <groupId>info.ejava.alamnr.assignment2.autorentals</groupId>
+            <artifactId>autorentals-api-svc</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>info.ejava.alamnr.assignment2.autorentals</groupId>
+            <artifactId>autorentals-api-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>info.ejava.examples.common</groupId>
@@ -58,13 +75,20 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
+        <!-- <dependency>
             <groupId>info.ejava.assignments.api.autorentals</groupId>
             <artifactId>autorenters-support-api-svc</artifactId>
             <version>${project.version}</version>
             <classifier>tests</classifier>
             <scope>test</scope>
-        </dependency>
+        </dependency> -->
+        <dependency>
+            <groupId>${api.groupId}</groupId>
+            <artifactId>autorentals-api-main</artifactId>
+            <classifier>tests</classifier>
+            <version>${api.version}</version>
+            <scope>test</scope>
+        </dependency> 
     </dependencies>
 
     <build>
