added unit integration test for spring security authenticated aceess

--- a/autorentals-alam/assignment3-autorentals-security/autorentals-security-svc/src/test/resources/application-authenticated-access.properties
+++ b/autorentals-alam/assignment3-autorentals-security/autorentals-security-svc/src/test/resources/application-authenticated-access.properties
@@ -1,2 +1,4 @@
-#spring.security.user.name: ted
-#spring.security.user.password: secret
+// page no - 749, section  - 238.2.3 , Requirement -1
+
+spring.security.user.name: ted
+spring.security.user.password: secret
