added in memory userDetails

--- a/autorentals-alam/assignment3-autorentals-security/autorentals-security-svc/src/test/resources/application-authenticated-access.properties
+++ b/autorentals-alam/assignment3-autorentals-security/autorentals-security-svc/src/test/resources/application-authenticated-access.properties
@@ -1,4 +1,4 @@
 // page no - 749, section  - 238.2.3 , Requirement -1
 
-spring.security.user.name: ted
-spring.security.user.password: secret
+#spring.security.user.name: ted
+#spring.security.user.password: secret
