--- a/autorentals-alam/assignment3-autorentals-security/autorentals-security-svc/src/main/resources/application.properties
+++ b/autorentals-alam/assignment3-autorentals-security/autorentals-security-svc/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.security.log-request-details=true
 
 logging.pattern.console=%d{HH:mm:ss.SSS} %t %5p %50.50(%logger{40}#%method:%line) %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}}
 
-spring.security.user.name:user
-spring.security.user.password:password
+#spring.security.user.name:user
+#spring.security.user.password:password
