The JDBC UserDetailsService requires that all valid users have at least one authority so I have

--- a/autorentals-alam/assignment3-autorentals-security/autorentals-security-svc/src/main/resources/application.properties
+++ b/autorentals-alam/assignment3-autorentals-security/autorentals-security-svc/src/main/resources/application.properties
@@ -6,3 +6,11 @@ logging.pattern.console=%d{HH:mm:ss.SSS} %t %5p %50.50(%logger{40}#%method:%line
 
 #spring.security.user.name:user
 #spring.security.user.password:password
+
+
+spring.datasource.url = jdbc:h2:mem:users
+
+
+spring.sql.init.schema-locations = classpath:database/users-schema.ddl
+spring.sql.init.data-locations = classpath:database/users-populate.sql
+spring.h2.console.enabled = true
