--- a/autorentals-alam/assignment3-autorentals-security/autorentals-security-svc/pom.xml
+++ b/autorentals-alam/assignment3-autorentals-security/autorentals-security-svc/pom.xml
@@ -123,7 +123,16 @@
             <scope>test</scope>
         </dependency> -->
 
-
+        <!-- username and password taken from relational db -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
