Spring security assignment

--- a/autorentals-alam/assignment3-autorentals-security/autorentals-security-svc/src/test/resources/application-test.properties
+++ b/autorentals-alam/assignment3-autorentals-security/autorentals-security-svc/src/test/resources/application-test.properties
@@ -10,6 +10,8 @@ logging.level.info.ejava.examples.common.web=DEBUG
 logging.level.info.ejava.assignment3=DEBUG
 logging.level.info.ejava.alamnr=DEBUG
 
-logging.level.org.springframework.security.web=TRACE
+#logging.level.org.springframework.security.web=TRACE
+
+logging.level.org.springframework.security=DEBUG
 
 https.enabled=false
