added with test error in MyB2_AuthorizationNTest_Extended

--- a/autorentals-alam/assignment3-autorentals-security/autorentals-security-svc/src/test/resources/application-test.properties
+++ b/autorentals-alam/assignment3-autorentals-security/autorentals-security-svc/src/test/resources/application-test.properties
@@ -9,9 +9,10 @@ ${LOG_EXCEPTION_CONVERSION_WORD:%wEx}}
 logging.level.info.ejava.examples.common.web=DEBUG
 logging.level.info.ejava.assignment3=DEBUG
 logging.level.info.ejava.alamnr=DEBUG
+logging.level.info.ejava.assignments=DEBUG
 
-#logging.level.org.springframework.security.web=TRACE
+logging.level.org.springframework.security.web=DEBUG
 
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
 
 https.enabled=false
