--- a/autorentals-alam/assignment3-autorentals-security/autorentals-security-svc/pom.xml
+++ b/autorentals-alam/assignment3-autorentals-security/autorentals-security-svc/pom.xml
@@ -62,7 +62,7 @@
             <version>${ejava.version}</version>        
         </dependency>
             
-        <!-- <dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
@@ -70,7 +70,7 @@
             <groupId>info.ejava.assignments.aop.autorentals</groupId>
             <artifactId>autorentals-support-aop</artifactId>
             <version>${ejava.version}</version>
-        </dependency> -->
+        </dependency> 
 
         <!-- bring in spring boot test framework -->
 
